--- a/en-US/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
+++ b/en-US/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
@@ -2,7 +2,7 @@
 
 In the `LOAD DATA` statement, the `direct` keyword is used as a hint to indicate whether bypass import is used.
 
-## Limits
+## Limitations
 
 * You cannot execute two statements to write the same table at a time because a lock is added to the table during import.
 * The `LOAD DATA` statement cannot be used in triggers.
@@ -30,10 +30,10 @@ For more information about the syntax of the `LOAD DATA` statement, see [LOAD DA
 
 1. Log on to the server where the target OBServer node resides and create test data in the `/home/admin` directory.
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>In OceanBase Database, the <code>LOAD DATA</code> statement can load only local input files on OBServer nodes. Therefore, you must copy the to-be-imported files to an OBServer node before the import. </p>
-    </main>
+   </main>
 
    ```shell
    [xxx@xxx /home/admin]# ssh admin@10.10.10.1
@@ -50,10 +50,10 @@ For more information about the syntax of the `LOAD DATA` statement, see [LOAD DA
 
    The global system variable `secure_file_priv` specifies the path accessible when you import/export data to/from a file. The default value is `NULL`, indicating that file import and export are disabled. For more information, see [secure_file_priv (MySQL mode)](../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/115.secure_file_priv-of-mysql-mode.md) and [secure_file_priv (Oracle mode)](../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/114.secure_file_priv-of-oracle-mode.md).
 
-<main id="notice" type='notice'>
+   <main id="notice" type='notice'>
       <h4>Notice</h4>
       <p>For security reasons, when you set the system variable <code>secure_file_priv</code>, you can use only the local client to execute the SQL statement that modifies the global variable. Specifically, the OBClient is installed on the server where the OBServer node to connect to resides. </p>
-    </main>
+   </main>
 
    1. Log on to the server where the OBServer node to connect to resides.
 
