--- a/en-US/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
+++ b/en-US/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
@@ -2,7 +2,7 @@
 
 The `INSERT INTO SELECT` statement uses the `append` keyword and the `enable_parallel_dml` parameter as hints to enable bypass import.
 
-## Limits
+## Limitations
 
 * Only parallel data manipulation language (PDML) data can be imported in bypass mode.
 * You cannot execute two statements to write the same table at a time because a lock is added to the table during import.
