--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/4.use-cloudcanal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/4.use-cloudcanal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -26,11 +26,11 @@ You have installed and deployed CloudCanal Community Edition and obtained and ac
 
 1. Log on to CloudCanal.
 
-   ![Logon page of CloudCanal](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/%E7%99%BB%E5%BD%95CloudCanal.png)
+   <!-- ![Logon page of CloudCanal](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/%E7%99%BB%E5%BD%95CloudCanal.png) -->
 
 2. Go to the data source management page and click **Add Data Source**.
 
-   ![Add a data source](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/1%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E6%BA%90.png)
+   <!-- ![Add a data source](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/1%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E6%BA%90.png) -->
 
 3. On the Add Data Source page, specify the information about the data source.
 
@@ -53,25 +53,25 @@ You have installed and deployed CloudCanal Community Edition and obtained and ac
          * Password: the password corresponding to the username for logging on to the MySQL database.
          * Description: the description of the database. Specify a name that is easy to remember and identify, such as transaction database, user database, or test database. This field is optional.
 
-         ![MySQL](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/2MySQL%E6%BA%90%E5%BA%93.png)
+         <!-- ![MySQL](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/2MySQL%E6%BA%90%E5%BA%93.png) -->
 
       * Select **Self-managed Database** for **Deployment Type** and **OceanBase** for **Database Type** to add the OceanBase database instance that you deployed.
 
          OceanBase data source settings:
 
          * Network Address: the IP address for connecting to the OceanBase database directly or by using OceanBase Database Proxy (ODP).
-         * oblogproxy host: the IP address of oblogproxy. This parameter is required when an OceanBase database serves as the source database for incremental synchronization. It is optional when an OceanBase database serves as the destination database. For more information about oblogproxy, see [oblogproxy](http://11.124.9.83:19898/obdoc/oms-enterprise/V3.4.0/zh-CN/index.html#/5.1.install-oblogproxy.html).
+         * oblogproxy host: the IP address of oblogproxy. This parameter is required when an OceanBase database serves as the source database for incremental synchronization. It is optional when an OceanBase database serves as the destination database. <!--For more information about oblogproxy, see [oblogproxy](http://11.124.9.83:19898/obdoc/oms-enterprise/V3.4.0/zh-CN/index.html#/5.1.install-oblogproxy.html).-->
          * OceanBaseRpcPort: the RPC port of the OceanBase database. Default value: 2882.
          * Authentication Method: the authentication method. Valid values: **Account and Password**, **Account without Password**, and **No Account and Password**. Default value: Account and Password.
          * Account: the username for logging on to the OceanBase database. If you directly connect to the OceanBase database, the username is in the **Username@Tenant name** format. If you connect to the OceanBase database using ODP, the username is in the **Username@Tenant name#Cluster name** format.
          * Password: the password corresponding to the username for logging on to the OceanBase database.
          * Description: the description of the database. Specify a name that is easy to remember and identify, such as transaction database, user database, or test database. This field is optional.
 
-         ![OceanBase](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/3OB%E7%9B%AE%E6%A0%87%E5%BA%93.png)
+         <!-- ![OceanBase](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/3OB%E7%9B%AE%E6%A0%87%E5%BA%93.png) -->
 
 4. View the two added data sources.
 
-   ![View data sources](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/4%E6%95%B0%E6%8D%AE%E6%BA%90%E5%B1%95%E7%A4%BA.png)
+   <!-- ![View data sources](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/4%E6%95%B0%E6%8D%AE%E6%BA%90%E5%B1%95%E7%A4%BA.png) -->
 
 ### Create a task
 
@@ -79,7 +79,7 @@ After you add data sources, perform the following steps to perform full migratio
 
 1. Choose **Task Management** > **Create Task**.
 
-   ![Manage tasks](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/5%E4%BB%BB%E5%8A%A1%E7%AE%A1%E7%90%86.png)
+   <!-- ![Manage tasks](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/5%E4%BB%BB%E5%8A%A1%E7%AE%A1%E7%90%86.png) -->
 
 2. Set the source and destination databases.
 
@@ -91,7 +91,7 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Set the source and destination databases](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/6%E6%BA%90%E7%9B%AE%E6%A0%87%E8%AE%BE%E7%BD%AEmysql-to-ob.png)
+   <!-- ![Set the source and destination databases](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/6%E6%BA%90%E7%9B%AE%E6%A0%87%E8%AE%BE%E7%BD%AEmysql-to-ob.png) -->
 
 3. Complete the feature settings.
 
@@ -109,7 +109,7 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Complete the feature settings](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/7%E5%8A%9F%E8%83%BD%E9%85%8D%E7%BD%AE.png)
+   <!-- ![Complete the feature settings](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/7%E5%8A%9F%E8%83%BD%E9%85%8D%E7%BD%AE.png) -->
 
 4. Perform table and action filtering.
 
@@ -117,7 +117,7 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Perform table and action filtering](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/8%E8%A1%A8%26action%E8%BF%87%E6%BB%A4_%E5%A2%9E%E9%87%8F%E5%90%8C%E6%AD%A5.png)
+   <!-- ![Perform table and action filtering](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/8%E8%A1%A8%26action%E8%BF%87%E6%BB%A4_%E5%A2%9E%E9%87%8F%E5%90%8C%E6%AD%A5.png) -->
 
 5. Perform data processing.
 
@@ -125,19 +125,19 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Perform data processing](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/9%E6%95%B0%E6%8D%AE%E5%A4%84%E7%90%86.png)
+   <!-- ![Perform data processing](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/9%E6%95%B0%E6%8D%AE%E5%A4%84%E7%90%86.png) -->
 
 6. Confirm the task information.
 
-   Confirm the task information and then click OK to create the task.
+   Confirm the task information and then click **OK** to create the task.
 
-   ![Confirm task information](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/10%E7%A1%AE%E8%AE%A4%E5%88%9B%E5%BB%BA%E4%BB%BB%E5%8A%A1.png)
+   <!-- ![Confirm task information](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/10%E7%A1%AE%E8%AE%A4%E5%88%9B%E5%BB%BA%E4%BB%BB%E5%8A%A1.png) -->
 
 ### View the task status
 
 After the task is created, schema migration, full migration, and incremental synchronization are automatically performed. The progress bar will advance gradually. Return to the task management page of CloudCanal. Refresh the page and view the real-time task status, which changes from schema migration to data initialization and data synchronization.
 
-![View the task status](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/11%E6%9F%A5%E7%9C%8B%E4%BB%BB%E5%8A%A1.png)
+<!-- ![View the task status](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.5.36/11%E6%9F%A5%E7%9C%8B%E4%BB%BB%E5%8A%A1.png) -->
 
 ## References
 
