--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -28,11 +28,11 @@ This topic describes how to use CloudCanal Community Edition V2.2.6.9 to migrate
 
 1. Log on to CloudCanal.
 
-   ![Logon page of CloudCanal](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/%E7%99%BB%E5%BD%95CloudCanal.png)
+   <!-- ![Logon page of CloudCanal](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/%E7%99%BB%E5%BD%95CloudCanal.png) -->
 
 2. Go to the data source management page and click **Add Data Source**.
 
-   ![Add a data source](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/1%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E6%BA%90.png)
+   <!-- ![Add a data source](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/1%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E6%BA%90.png) -->
 
 3. On the Add Data Source page, specify the information about the data source.
 
@@ -57,7 +57,7 @@ This topic describes how to use CloudCanal Community Edition V2.2.6.9 to migrate
          * Password: the password corresponding to the username for logging on to the OceanBase database.
          * Description: the description of the database. Specify a name that is easy to remember and identify, such as transaction database, user database, or test database. This field is optional.
 
-         ![OceanBase](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/3ob%E6%95%B0%E6%8D%AE%E6%BA%90.png)
+         <!-- ![OceanBase](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/3ob%E6%95%B0%E6%8D%AE%E6%BA%90.png) -->
 
       * Select **Self-managed Database** for **Deployment Type** and **MySQL** for **Database Type** to add the MySQL database instance that you deployed.
 
@@ -69,11 +69,11 @@ This topic describes how to use CloudCanal Community Edition V2.2.6.9 to migrate
          * Password: the password corresponding to the username for logging on to the MySQL database.
          * Description: the description of the database. Specify a name that is easy to remember and identify, such as transaction database, user database, or test database. This field is optional.
 
-         ![MySQL](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/2mysql%E6%95%B0%E6%8D%AE%E6%BA%90.png)
+         <!-- ![MySQL](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/2mysql%E6%95%B0%E6%8D%AE%E6%BA%90.png) -->
 
 4. View the two added data sources.
 
-   ![View data sources](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/4ob312%E6%9F%A5%E7%9C%8B%E6%95%B0%E6%8D%AE%E6%BA%90.png)
+   <!-- ![View data sources](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/4ob312%E6%9F%A5%E7%9C%8B%E6%95%B0%E6%8D%AE%E6%BA%90.png) -->
 
 ### Create a task
 
@@ -81,7 +81,7 @@ After you add data sources, perform the following steps to perform full migratio
 
 1. Choose **Task Management** > **Create Task**.
 
-   ![Create a task](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/5%E5%88%9B%E5%BB%BA%E4%BB%BB%E5%8A%A1.png)
+   <!-- ![Create a task](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/5%E5%88%9B%E5%BB%BA%E4%BB%BB%E5%8A%A1.png) -->
 
 2. Set the source and destination databases.
 
@@ -93,7 +93,7 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Set the source and destination databases](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/6%E6%BA%90%E7%9B%AE%E6%A0%87%E5%BA%93%E8%AE%BE%E7%BD%AE.png)
+   <!-- ![Set the source and destination databases](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/6%E6%BA%90%E7%9B%AE%E6%A0%87%E5%BA%93%E8%AE%BE%E7%BD%AE.png) -->
 
 3. Complete the feature settings.
 
@@ -111,7 +111,7 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Complete the feature settings](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/7%E5%8A%9F%E8%83%BD%E9%85%8D%E7%BD%AE.png)
+   <!-- ![Complete the feature settings](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/7%E5%8A%9F%E8%83%BD%E9%85%8D%E7%BD%AE.png) -->
 
 4. Perform table and action filtering.
 
@@ -119,7 +119,7 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Perform table and action filtering](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/8%E8%A1%A8%26action%E8%BF%87%E6%BB%A4.png)
+   <!-- ![Perform table and action filtering](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/8%E8%A1%A8%26action%E8%BF%87%E6%BB%A4.png) -->
 
 5. Perform data processing.
 
@@ -131,13 +131,13 @@ After you add data sources, perform the following steps to perform full migratio
 
    * Click **Next**.
 
-   ![Perform data processing](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/9%E6%95%B0%E6%8D%AE%E5%A4%84%E7%90%86.png)
+   <!-- ![Perform data processing](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/9%E6%95%B0%E6%8D%AE%E5%A4%84%E7%90%86.png) -->
 
 6. Confirm the task information.
 
    Confirm the task information and then click **Create Task**.
 
-   ![Confirm task information](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/10%E5%88%9B%E5%BB%BA%E7%A1%AE%E8%AE%A4.png)
+   <!-- ![Confirm task information](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/10%E5%88%9B%E5%BB%BA%E7%A1%AE%E8%AE%A4.png) -->
 
 ### View the task status
 
@@ -145,7 +145,7 @@ After the incremental synchronization task is created, **Schema Migration**, **F
 
 Return to the task management page of CloudCanal and click **Refresh** in the upper-right corner to view the real-time task status.
 
-![View the task status](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/11%E6%9F%A5%E7%9C%8B%E4%BB%BB%E5%8A%A12.png)
+<!-- ![View the task status](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/CloudCanal/cloudcanal2.2.6.9/11%E6%9F%A5%E7%9C%8B%E4%BB%BB%E5%8A%A12.png) -->
 
 ## References
 
