--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/5.use-flink-cdc-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/5.use-flink-cdc-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -1,8 +1,8 @@
-# Use Fink CDC to migrate data from OceanBase Database to a MySQL database
+# Use Flink CDC to migrate data from OceanBase Database to a MySQL database
 
 Flink CDC is a group of source CDC connectors for Apache Flink. It can read historical data and incremental data in real time from most databases. Flink CDC can synchronize the full data and incremental data of a database to a message queue product or data warehouse. Flink CDC can be used for real-time data integration. You can use it to import the data of a database to a data lake or warehouse in real time. Flink CDC also supports data processing. You can use the SQL client of Flink CDC to associate, widen, and aggregate data in a database in real time, and write the result to various storage media. Change Data Capture (CDC) can help you monitor and capture the changes in a database. You can do many things with data provided by the CDC. For example, you can use the data to make historical databases or do near real-time caching. You can also provide the CDC data to message queues (MQs), so you can use MQs for analysis and auditing. 
 
-This topic describes how to use Fink CDC to migrate data from OceanBase Database to a MySQL database. 
+This topic describes how to use Flink CDC to migrate data from OceanBase Database to a MySQL database. 
 
 ## Prepare the installation environment
 
@@ -36,7 +36,7 @@ oblogproxy is a proxy service for managing incremental logs of OceanBase Databas
 
 Download Flink and the required dependency packages.
 
-1. Download [Flink 1.15.3](https://downloads.apache.org/flink/flink-1.15.3/flink-1.15.3-bin-scala_2.12.tgz) and decompress it to the `flink-1.15.3` directory. 
+1. Download [Flink 1.15.3](https://downloads.apache.org/flink/) and decompress it to the `flink-1.15.3` directory. 
 
 2. Download the following dependency packages and place them in the `flink-1.15.3/lib/` directory. 
 
@@ -139,23 +139,15 @@ Create a table for storing the source data in the MySQL database.
 
    ![Flink_Web_UI](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/Flink_CDC/1Flink_Web_UI.png)
 
-<main id="notice" type='explain'>
-
-     <h4>Description</h4>
-
+   <main id="notice" type='explain'>
+     <h4>Note</h4>
      <p>After you run the <code>./bin/start-cluster.sh</code> command, if <code>bash: ./bin/start-cluster.sh: Permission denied</code> is displayed, you must change the privileges on all files in the <code>flink-1.15.3</code> directory from <code>-rw-rw-r--</code> to <code>-rwxrwxrwx</code>. </p>
-
      <p>Example:</p>
-
-    <pre><code class="language-bash">
-
-    [xxx@xxx /.../flink-1.15.3]
-
-    # chmod -R 777 /FLINK_HOME/flink-1.15.3/*
-
-    </code></pre>
-
-    </main>
+     <pre><code class="language-bash">
+     [xxx@xxx /.../flink-1.15.3]
+     # chmod -R 777 /FLINK_HOME/flink-1.15.3/*
+     </code></pre>
+   </main>
 
 3. Run the following command to start Flink SQL CLI. 
 
