--- a/en-US/5.data-migration/5.migrate-data-from-oceanbase-database-to-oracle-database/2.use-datax-to-migrate-oceanbase-database-to-oracle-database.md
+++ b/en-US/5.data-migration/5.migrate-data-from-oceanbase-database-to-oracle-database/2.use-datax-to-migrate-oceanbase-database-to-oracle-database.md
@@ -125,7 +125,7 @@ Parameters
 - `errorLimit`: the limit on the number of error records. When this limit is exceeded, the task is terminated. 
 - `channel`: the concurrency. Technically, a higher concurrency value indicates higher migration performance. In actual operations, you must also consider the read pressure on the source database, network transmission performance, and write performance of the destination database. 
 
-## `Prepare the environment.`
+## Prepare the environment
 
 Download the .tar package from http://datax-opensource.oss-cn-hangzhou.aliyuncs.com/datax.tar.gz.
 
