--- a/en-US/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/1.use-datax-to-load-csv-data-files-to-oceanbase-database.md
+++ b/en-US/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/1.use-datax-to-load-csv-data-files-to-oceanbase-database.md
@@ -121,7 +121,7 @@ Parameters
 - `errorLimit` specifies the maximum number of erroneous records allowed for the task. If this limit is exceeded, the task is interrupted and exits. 
 - `channel` specifies the concurrency. Theoretically, the migration performance increases with the concurrency. However, in practice, you need to consider the read pressure on the source side, network transmission performance, and write performance on the destination side. 
 
-## `Prepare the environment`
+## Prepare the environment
 
 Download the .tar package from `http://datax-opensource.oss-cn-hangzhou.aliyuncs.com/datax.tar.gz`.
 
