--- a/en-US/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
+++ b/en-US/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
@@ -109,13 +109,13 @@ The following section describes how to use web ODC to import data.
 
    For more information about how to connect to OceanBase Database, see [Create a private connection](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033246).
 
-   ![Connect to OceanBase Database](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/%E6%96%B0%E5%BB%BA%E4%B8%AA%E4%BA%BA%E8%BF%9E%E6%8E%A5.png)
+   <!-- ![Connect to OceanBase Database](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/%E6%96%B0%E5%BB%BA%E4%B8%AA%E4%BA%BA%E8%BF%9E%E6%8E%A5.png) -->
 
 3. Go to the **Import Settings** panel.
 
    After you open a database connection, click **Tool** in the top navigation bar, and then select **Import** from the drop-down list to go to the **Import Settings** panel.
 
-   ![Import under Tools](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/2%E5%B7%A5%E5%85%B7%E5%AF%BC%E5%85%A5.png)
+   <!-- ![Import under Tools](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/2%E5%B7%A5%E5%85%B7%E5%AF%BC%E5%85%A5.png) -->
 
 4. Upload the SQL file.
 
@@ -126,7 +126,7 @@ The following section describes how to use web ODC to import data.
    * **Encoding Standard**: ODC supports the following character sets: **ASCII, ISO-8859-1, GB2312, GBK, GB18030, Unicode (UTF-8), Unicode (UTF-16), Unicode (UTF-32)**, and **BIG5**. You can select the encoding standard from the **File Encoding** drop-down list.
    * Click **Next: Import Settings**.
 
-   ![Create Import Task](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/3%E6%96%B0%E5%BB%BA%E5%AF%BC%E5%85%A5.png)
+   <!-- ![Create Import Task](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/3%E6%96%B0%E5%BB%BA%E5%AF%BC%E5%85%A5.png) -->
 
 5. Configure the import settings.
 
@@ -136,19 +136,20 @@ The following section describes how to use web ODC to import data.
    * **Execution Mode**: You can select **Execute immediately** or **Timed execution**.
    * **Sys Tenant Account Settings**: After you specify the account and password, click **Test Connection** next to the password field to verify whether the account information is valid. By default, the account for the connection settings is automatically filled in. If the connection fails, we recommend that you change the password for this export.
 
-<main id="notice" type='notice'>
+   <main id="notice" type='notice'>
     <h4>Notice</h4>
     <p>The account and password of the sys tenant are the account and password of a user in a cluster tenant. Do not enter "@sys#cluster" in the Account field. </p>
-  </main>
+   </main>
+
     * After you complete the configurations, click **Submit**.
     
-    ![Import Settings](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/4%E5%AF%BC%E5%85%A5%E8%AE%BE%E7%BD%AE.png)
+    <!-- ![Import Settings](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/4%E5%AF%BC%E5%85%A5%E8%AE%BE%E7%BD%AE.png) -->
 
 6. View the import task.
 
    After the task is generated, the **Task Center** page automatically appears, where you can view the task information. For more information, see [Import tasks](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033258).
 
-   ![View tasks](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/5%E6%9F%A5%E7%9C%8B%E4%BB%BB%E5%8A%A1.png)
+   <!-- ![View tasks](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/ODC/5%E6%9F%A5%E7%9C%8B%E4%BB%BB%E5%8A%A1.png) -->
 
 ## Import data by using OBLOADER
 
@@ -165,10 +166,10 @@ The following section describes how to use web ODC to import data.
    $./obloader -h <host IP address> -P <port number> -u <username> -p <password> --sys-user <root or proxyro user in the sys tenant> --sys-password <password of the user in the sys tenant> -c <cluster> -t <tenant> -D <schema name> [--ddl] [--csv|--sql] [--all|--table 'table name'] -f<data file or directory>
    ```
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>When you use the host address and port number of a physical node to import data, you do not need to specify the <code>-c</code> option. </p>
-  </main>
+   </main>
 
     For more information about the command-line options of OBLOADER, see [Command-line options](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000000971199).
 
@@ -197,7 +198,7 @@ The following table describes the database information that is used in the examp
     <li>The name of the SQL file is in the <code>table name-schema.sql</code> format. </li>
     <li>When you import data, specify the <code>--sys-user</code> and <code>--sys-password</code> options, so that OBLOADER can obtain the metadata of the table schema. </li>
     </ul>
-  </main>
+</main>
 
 Scenario: Import the SQL data files in the `/home/admin/test_sql/data/TABLE` directory to the `test_data` schema of the `mysql001` tenant in the `test4000` cluster.
 
