--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
@@ -17,8 +17,8 @@ Python 2.7 and the following modules have been installed on the OBServer node:
 ## Procedure
 
 <main id="notice" type='notice'>
-<h4>Notice</h4>
-<p>When you perform the following steps to execute the upgrade script, the value of the <code>-u</code> parameter must be a user that has the read/write and SUPER privileges in the sys tenant.<code></code><code><code> </p>
+   <h4>Notice</h4>
+   <p>When you perform the following steps to execute the upgrade script, the value of the <code>-u</code> parameter must be a user that has the read/write and SUPER privileges in the sys tenant.</p>
 </main>
 
 ### Step 1: Back up the cluster parameters
@@ -59,7 +59,7 @@ obclient [(none)]> SELECT SVR_IP,ZONE,NAME,VALUE FROM OCEANBASE.GV$OB_PARAMETERS
    [root@xxx /]# scp $rpm_name admin@observer_ip:/$rpm_dir
    ```
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
       <h4>Note</h4>
       <p>Contact OceanBase Technical Support to obtain the OceanBase Database installation package of the target version. </p>
     </main>
@@ -72,7 +72,7 @@ obclient [(none)]> SELECT SVR_IP,ZONE,NAME,VALUE FROM OCEANBASE.GV$OB_PARAMETERS
    [root@xxx $rpm_dir]# rpm2cpio $rpm_name | cpio -div
    ```
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>After the RPM package is decompressed, the <code>home</code> and <code>use</code> directories are generated in the directory where the RPM package is located. The upgrade script and the <code>oceanbase_upgrade_dep.yml</code> file are stored in the <code>home/admin/oceanbase/etc</code> directory. </p>
     </main>
@@ -127,7 +127,7 @@ Example:
 [root@xxx /rpm_dir/home/admin/oceanbase/etc]# python upgrade_checker.py -h 127.0.0.1 -P 2881 -u xxxx@sys -p******
 ```
 
-## Step 5: Run the upgrade_pre.py script
+### Step 5: Run the upgrade_pre.py script
 
 Specify the logon information for directly connecting to the OBServer node from the sys tenant. Run the `upgrade_pre.py` script. If the script is successfully executed, you can continue with the upgrade.
 
@@ -233,7 +233,7 @@ This script completes the following major upgrade operations and related checks:
 10. End the upgrade state of the cluster by using the ALTER SYSTEM END UPGRADE statement.
 11. Enable the parameters disabled during the upgrade and perform a check.
 
-Skip steps 3 to 5, step 7, and step 9 in the following scenarios:
+Skip Step 3 to 5, Step 7, and Step 9 in the following scenarios:
 
 1. Intra-version upgrade
 2. Cross-version upgrade in which the source and target versions have the same version of data
