--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -29,21 +29,21 @@ Compared with V3.2.3, OceanBase Database V3.2.4 improves the compatibility and s
 
 * Support for GIS
 
-   GIS provides the storage, computing, and indexing capabilities for spatial objects such as points, lines, planes, and complex spatial objects. GIS is widely applied in the transportation industry and can help quickly build spatial computing capabilities. GIS is supported since OceanBase Database V3.2.4. GIS in OceanBase Database adopts the quadtree-based indexing solution and supports the GIS data types of MySQL 8.0, the management and caching of spatial reference system (SRS) metadata, quadtree-based spatial indexes, single-value types (GEOMETRY, POINT, LINESTRING, and POLYGON), and multi-value types (MULTIPOINT, MULTILINESTRING, MULTIPOLYGON, and GEOMETRYCOLLECTION). The spatial computing functions commonly used in MySQL 8.0 are also implemented. For more information, see [Functions for spatial computing](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000948011).
+   GIS provides the storage, computing, and indexing capabilities for spatial objects such as points, lines, planes, and complex spatial objects. GIS is widely applied in the transportation industry and can help quickly build spatial computing capabilities. GIS is supported since OceanBase Database V3.2.4. GIS in OceanBase Database adopts the quadtree-based indexing solution and supports the GIS data types of MySQL 8.0, the management and caching of spatial reference system (SRS) metadata, quadtree-based spatial indexes, single-value types (GEOMETRY, POINT, LINESTRING, and POLYGON), and multi-value types (MULTIPOINT, MULTILINESTRING, MULTIPOLYGON, and GEOMETRYCOLLECTION). The spatial computing functions commonly used in MySQL 8.0 are also implemented. For more information, see [Functions for spatial computing](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000850664).
 
 - Support for MySQL binlog parsing
 
-   The OceanBase CDC data synchronization solution supports MySQL binlogs and allows popular applications, such as Canal, Debezium, and Flink CDC, to generate and parse binlogs in OceanBase Database. The OBServer must support binlog-related system variables such as binlog_format, binlog_row_image, log_bin, and server_uuid. The REPLICATION SLAVE and REPLICATION CLIENT privileges can be set. OceanBase CDC parses clogs in OceanBase Database into binlogs for subscription and consumption by downstream products. For more information, see [binlog_row_image](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946273).
+   The OceanBase CDC data synchronization solution supports MySQL binlogs and allows popular applications, such as Canal, Debezium, and Flink CDC, to generate and parse binlogs in OceanBase Database. The OBServer must support binlog-related system variables such as binlog_format, binlog_row_image, log_bin, and server_uuid. The REPLICATION SLAVE and REPLICATION CLIENT privileges can be set. OceanBase CDC parses clogs in OceanBase Database into binlogs for subscription and consumption by downstream products. For more information, see [binlog_row_image](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000848300).
 
 - Addition of the DBMS_RESOURCE_MANAGER system package
 
-   The DBMS_RESOURCE_MANAGER system package is added for creating and maintaining resource consumer groups, resource management plans, and binding rules of resource consumer groups. More functions are supported, such as CREATE_CONSUMER_GROUP, CREATE_PLAN, and SET_CONSUMER_GROUP_MAPPING. For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946017).
+   The DBMS_RESOURCE_MANAGER system package is added for creating and maintaining resource consumer groups, resource management plans, and binding rules of resource consumer groups. More functions are supported, such as CREATE_CONSUMER_GROUP, CREATE_PLAN, and SET_CONSUMER_GROUP_MAPPING.<!--For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946017).中文断链-->
 
 #### Compatibility with Oracle
 
 - Addition of the DBMS_SCHEDULER system package
 
-   The DBMS_SCHEDULER system package is added for managing scheduled tasks. More functions are supported, such as CREATE_JOB, CREATE_PROGRAM, and DEFINE_PROGRAM_ARGUMENT. For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945869).
+   The DBMS_SCHEDULER system package is added for managing scheduled tasks. More functions are supported, such as CREATE_JOB, CREATE_PROGRAM, and DEFINE_PROGRAM_ARGUMENT. <!--For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945869).中文断链-->
 
 - Supplementation of system package functions
 
@@ -57,15 +57,15 @@ Compared with V3.2.3, OceanBase Database V3.2.4 improves the compatibility and s
 
    In real practice, more fine-grained control of resource isolation is required for business. For example, different SQL statements are executed by using different resource specifications for isolation. This helps allocate and isolate resources for business systems such as OLAP and OLTP, and reduces the mutual impact between business systems.
 
-   OceanBase Database V3.2.4 supports creating resource groups and binding users to resource groups. When a user executes a business SQL statement, OceanBase Database allocates the corresponding resource group based on the predefined SQL rules to help the user define a business resource isolation plan. At present, the resource isolation plan applies only to CPU resources. For more information, see [Multi-tenant resource isolation](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000944803).
+   OceanBase Database V3.2.4 supports creating resource groups and binding users to resource groups. When a user executes a business SQL statement, OceanBase Database allocates the corresponding resource group based on the predefined SQL rules to help the user define a business resource isolation plan. At present, the resource isolation plan applies only to CPU resources. For more information, see [Multi-tenant resource isolation](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000848891).
 
 - Support for the IPv6 protocol
 
-   IPv6 is widely applied in customer projects as it gains popularity among communications network suppliers and terminal vendors. OceanBase Database V3.2.4 and related components, such as ODP and JDBC, support IPv6. OceanBase clusters support both IPv4 and IPv6 TCP/IP connections. Before you use IPv6, make sure that the operating system of your server is configured to support IPv6. For more information, see [IS_IPV6](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000947754).
+   IPv6 is widely applied in customer projects as it gains popularity among communications network suppliers and terminal vendors. OceanBase Database V3.2.4 and related components, such as ODP and JDBC, support IPv6. OceanBase clusters support both IPv4 and IPv6 TCP/IP connections. Before you use IPv6, make sure that the operating system of your server is configured to support IPv6. For more information, see [IS_IPV6](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000850633).
 
 - Support for backup to OBS
 
-   Backup and recovery is a core feature for ensuring the high availability of OceanBase Database. OceanBase Database supports three backup media: Alibaba Cloud Network File System (NFS), Alibaba Cloud Object Storage Service (OSS), and Tencent Cloud Object Storage (COS). OceanBase Database supports backup to HUAWEI CLOUD Object Storage Service (OBS) since V3.2.4. You can specify the backup destination (backup_dest) to back up data and log files to OBS.   For more information, see [Preparations for backup](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945704).
+   Backup and recovery is a core feature for ensuring the high availability of OceanBase Database. OceanBase Database supports three backup media: Alibaba Cloud Network File System (NFS), Alibaba Cloud Object Storage Service (OSS), and Tencent Cloud Object Storage (COS). OceanBase Database supports backup to HUAWEI CLOUD Object Storage Service (OBS) since V3.2.4. You can specify the backup destination (backup_dest) to back up data and log files to OBS.   For more information, see [Preparations for backup](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000851187).
 
 * Log optimization
    OceanBase Database V3.2.4 optimizes log output in the following aspects:
