--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/97.ob-322.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/97.ob-322.md
@@ -63,19 +63,19 @@ OceanBase Database V3.2.2 improves the stability and ease of use of the database
 
    * Supports all JSON functions of MySQL 5.7 and some JSON functions of MySQL 8.0 such as JSON_OVERLAPS() and JSON_VALUE(). 
 
-   For more information about the JSON data types, see [Overview of JSON data types](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000365138). 
+   <!--For more information about the JSON data types, see [Overview of JSON data types](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000365138). -->
 
 * Supports non-template-based subpartitions for table groups.
 
    Allows you to specify non-template-based RANGE-RANGE or LIST-LIST subpartitions when creating or deleting a table group. 
 
-   For more information about non-template-based subpartitions, see [Create a subpartition without using a template](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000364069). 
+   <!-- For more information about non-template-based subpartitions, see [Create a subpartition without using a template](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000364069).  -->
 
 * Supports disconnecting of standby clusters from the primary cluster.
 
    Allows you to disconnect a standby cluster from the primary cluster so that the standby cluster functions as a new independent cluster. During the upgrade of a business system, you can disconnect a standby cluster as a new cluster to verify business logic in this cluster, without affecting the primary cluster. 
 
-   For more information about disconnecting standby clusters, see [Disconnect a standby cluster](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363979). 
+   <!-- For more information about disconnecting standby clusters, see [Disconnect a standby cluster](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363979).  -->
 
 **Increased compatibility**
 
@@ -87,7 +87,7 @@ OceanBase Database V3.2.2 improves the stability and ease of use of the database
 
    * The BIT_AND(), BIT_OR(), and BIT_XOR() aggregate functions are supported. You can call these functions to return the bitwise AND, OR, and XOR operation results of expressions. 
 
-      For more information, see [BIT_AND](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363863), [BIT_OR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363785), and [BIT_XOR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363866). 
+      <!-- For more information, see [BIT_AND](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363863), [BIT_OR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363785), and [BIT_XOR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363866).  -->
 
    * Allows you to use subquery statements as outer join conditions. 
 
