--- a/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/1.V3.1.4.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/1.V3.1.4.md
@@ -28,7 +28,7 @@ OceanBase Database uses scheduled tasks for disk space adjustment based on the f
 
 * The space for data files on a single OBServer node cannot be recycled. If you want to reduce and release the occupied disk space, you can scale in the cluster by removing servers.
 
-For more information, see [datafile_next](https://www.oceanbase.com/docs/community-observer-cn-10000000000449772) and [datafile_maxsize](https://www.oceanbase.com/docs/community-observer-cn-10000000000449771).
+<!-- For more information, see [datafile_next](https://www.oceanbase.com/docs/community-observer-cn-10000000000449772) and [datafile_maxsize](https://www.oceanbase.com/docs/community-observer-cn-10000000000449771). -->
 
 ### Display of monitoring statistics in histograms
 
@@ -40,13 +40,13 @@ This new version displays collected monitoring statistics in histograms. Based o
 
 The histogram statistics of OceanBase Database provide the following features:
 
-* Supports the QUERY_RESPONSE_TIME view, which is defined in the INFORMATION_SCHEMA database. For more information, see [information_schema.QUERY_RESPONSE_TIME](https://www.oceanbase.com/docs/community-observer-cn-10000000000450545).
+* Supports the QUERY_RESPONSE_TIME view, which is defined in the INFORMATION_SCHEMA database. <!--For more information, see [information_schema.QUERY_RESPONSE_TIME](https://www.oceanbase.com/docs/community-observer-cn-10000000000450545).-->
 
-* Supports query_response_time_stats, the system variable that specifies whether to enable statistics. For more information, see [query_response_time_stats](https://www.oceanbase.com/docs/community-observer-cn-10000000000449978).
+* Supports query_response_time_stats, the system variable that specifies whether to enable statistics. <!--For more information, see [query_response_time_stats](https://www.oceanbase.com/docs/community-observer-cn-10000000000449978).-->
 
-* Supports query_response_time_range_base, the system variable that specifies the time interval of statistics collection. For more information, see [query_response_time_range_base](https://www.oceanbase.com/docs/community-observer-cn-10000000000449977).
+* Supports query_response_time_range_base, the system variable that specifies the time interval of statistics collection. <!--For more information, see [query_response_time_range_base](https://www.oceanbase.com/docs/community-observer-cn-10000000000449977).-->
 
-* Supports query_response_time_flush, the system variable that specifies whether to refresh statistics and reread data. For more information, see [query_response_time_flush](https://www.oceanbase.com/docs/community-observer-cn-10000000000449976).
+* Supports query_response_time_flush, the system variable that specifies whether to refresh statistics and reread data. <!--For more information, see [query_response_time_flush](https://www.oceanbase.com/docs/community-observer-cn-10000000000449976).-->
 
 * Supports OBAgent to read the statistics tables and generates histograms in Prometheus.
 
@@ -72,7 +72,7 @@ Core enhancements:
 
 * Transaction throttling is provided. OceanBase Database limits the number of table records that are queried and deleted each time in a background TTL-based task, commits transactions in batches to avoid large transactions, and supports transaction rollback in case of lock contention.
 
-For more information, see [Expired data deletion of HBaseAPI](https://www.oceanbase.com/docs/community-observer-cn-10000000000449593).
+<!-- For more information, see [Expired data deletion of HBaseAPI](https://www.oceanbase.com/docs/community-observer-cn-10000000000449593). -->
 
 ### Removal of cached SQL execution plans one at a time
 
@@ -84,7 +84,7 @@ When an unreasonable SQL execution plan is diagnosed, the DBA can use the SQL ID
 
 ### Enhanced product operation easiness
 
-* ob-operator supports the deployment of ODP, which makes it easier to use a multi-node cluster and improves the accuracy of query routing in the cluster. For more information, see [Deploy ODP](https://www.oceanbase.com/docs/community-observer-cn-10000000000449661).
+* ob-operator supports the deployment of ODP, which makes it easier to use a multi-node cluster and improves the accuracy of query routing in the cluster. <!--For more information, see [Deploy ODP](https://www.oceanbase.com/docs/community-observer-cn-10000000000449661).-->
 
 * To be compatible with MySQL error codes, OceanBase Database of earlier versions converts the internal error codes to external error codes when the log is generated. As a result, the error codes displayed at the client are different from those recorded in the log, which adds extra workload to troubleshooting. To make the troubleshooting easier, this version prints the external error codes that are exported to the client and the corresponding internal error codes at the same time.
 
