--- a/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/3.V3.1.2.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/3.V3.1.2.md
@@ -152,7 +152,7 @@ The following system functions are supported:
 
 * Enhanced ob_admin
 
-   ob_admin allows you to parse and explicitly export block_file, archive files, and backup metadata and data. Sample command: `ob_admin dumpsst`/`archive_tool`/`dump_backup`. For more information, see [ob_admin](https://www.oceanbase.com/docs/community-observer-cn-10000000000014920).
+   ob_admin allows you to parse and explicitly export block_file, archive files, and backup metadata and data. Sample command: `ob_admin dumpsst`/`archive_tool`/`dump_backup`. <!--For more information, see [ob_admin](https://www.oceanbase.com/docs/community-observer-cn-10000000000014920).-->
 
 * The documentation of OceanBase Database Community Edition is improved. The documentation includes many topics, such as architecture design principles, performance tuning, fault handling, and routine maintenance guide.
 
