--- a/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/4.V3.1.1.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/4.V3.1.1.md
@@ -79,15 +79,15 @@ OceanBase Database Community Edition V3.1.1 enhances the kernel compatibility, t
 
 ### High availability
 
-Physical backup and recovery are supported. Physical backup allows you to back up data of a cluster, including full data backup, incremental data backup, and near-real-time backup of commit logs. A backup can be triggered in seconds. Physical recovery allows you to recover data of a tenant to any earlier point in time. For example, a few seconds ago. For more information, see [Overview](https://www.oceanbase.com/docs/community-observer-cn-10000000000014176).
+Physical backup and recovery are supported. Physical backup allows you to back up data of a cluster, including full data backup, incremental data backup, and near-real-time backup of commit logs. A backup can be triggered in seconds. Physical recovery allows you to recover data of a tenant to any earlier point in time. For example, a few seconds ago. <!--For more information, see [Overview](https://www.oceanbase.com/docs/community-observer-cn-10000000000014176).-->
 
 ### Ease of use
 
-* OBD automatically configures OceanBase parameters based on system resources. The `obd cluster autodeploy` command is provided, which supports the automatic start of OceanBase Database with the highest specifications. You can run the `obd cluster tenant create/drop` command to create or delete a tenant. For more information, see [obd cluster tenant create](https://github.com/oceanbase/obdeploy/blob/master/README-CN.md#obd-cluster-tenant-create).
+* OBD automatically configures OceanBase parameters based on system resources. The `obd cluster autodeploy` command is provided, which supports the automatic start of OceanBase Database with the highest specifications. You can run the `obd cluster tenant create/drop` command to create or delete a tenant. For more information, see [obd cluster tenant create](https://github.com/oceanbase/obdeploy/blob/master/README.md).
 
 
 
-* OBD supports automatic tests. OBD can be integrated with the `mysql_test`, `TPC-H`, and `Sysbench` testing frameworks. For more information, see [OBD commands for tests](https://github.com/oceanbase/obdeploy/blob/master/README-CN.md#%E6%B5%8B%E8%AF%95%E5%91%BD%E4%BB%A4%E7%BB%84).
+* OBD supports automatic tests. OBD can be integrated with the `mysql_test`, `TPC-H`, and `Sysbench` testing frameworks. For more information, see [OBD commands for tests](https://github.com/oceanbase/obdeploy/blob/master/README.md).
 
 
 
@@ -95,7 +95,7 @@ Physical backup and recovery are supported. Physical backup allows you to back u
 
 
 
-* `ob_admin`, an administrator tool is provided. ob_admin allows you to parse transaction logs and convert transaction IDs to enhance the analysis and diagnosis of issues. Example: `ob_admin clog_tool/usec_tools <args>`. For more information, see [clog_tool](https://www.oceanbase.com/docs/community-observer-cn-10000000000013354).
+* `ob_admin`, an administrator tool is provided. ob_admin allows you to parse transaction logs and convert transaction IDs to enhance the analysis and diagnosis of issues. Example: `ob_admin clog_tool/usec_tools <args>`. <!--For more information, see [clog_tool](https://www.oceanbase.com/docs/community-observer-cn-10000000000013354).-->
 
 
 
@@ -117,7 +117,7 @@ Physical backup and recovery are supported. Physical backup allows you to back u
 
 ## Community ecosystem
 
-* Data synchronization tools such as Canal and DataX are supported. You can migrate data from a MySQL database to OceanBase Database. You can also use DataX to migrate full data to OceanBase Database. For more information, see [Use DataX to perform full data migration to OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-10000000000013798) and [Use Canal to perform incremental data migration to OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-10000000000013799).
+* Data synchronization tools such as Canal and DataX are supported. You can migrate data from a MySQL database to OceanBase Database. You can also use DataX to migrate full data to OceanBase Database. <!--For more information, see [Use DataX to perform full data migration to OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-10000000000013798) and [Use Canal to perform incremental data migration to OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-10000000000013799).-->
 
 
 
@@ -129,7 +129,7 @@ Physical backup and recovery are supported. Physical backup allows you to back u
 
 
 
-* Deployment of OceanBase Database in Docker containers is supported. For more information, see [Use Docker to deploy OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-10000000000013233).
+* Deployment of OceanBase Database in Docker containers is supported. <!--For more information, see [Use Docker to deploy OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-10000000000013233).-->
 
 
 
@@ -159,15 +159,15 @@ Physical backup and recovery are supported. Physical backup allows you to back u
 
 ## Fixed issues
 
-* An error is returned when an aggregate function is used with its alias. For example, if you use an aggregate function for a field and use the alias of the function for the results of the same field, you must use the alias to sort the results. For more information, see [Issue 173](https://github.com/oceanbase/oceanbase/issues/173).
+* An error is returned when an aggregate function is used with its alias. For example, if you use an aggregate function for a field and use the alias of the function for the results of the same field, you must use the alias to sort the results. <!--For more information, see [Issue 173](https://github.com/oceanbase/oceanbase/issues/173).-->
 
 
 
-* When you call the TIMEDIFF() function, if any of the two parameters has more than 2 decimal places, NULL is returned. For more information, see [Issue 177](https://github.com/oceanbase/oceanbase/issues/177).
+* When you call the TIMEDIFF() function, if any of the two parameters has more than 2 decimal places, NULL is returned. <!--For more information, see [Issue 177](https://github.com/oceanbase/oceanbase/issues/177).-->
 
 
 
-* An error is returned when you query a view in another OceanBase database. For more information, see [Issue 298](https://github.com/oceanbase/oceanbase/issues/298).
+* An error is returned when you query a view in another OceanBase database. <!--For more information, see [Issue 298](https://github.com/oceanbase/oceanbase/issues/298).-->
 
 
 
