--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/6.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/6.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -243,6 +243,6 @@ MySQL [test_ob_to_mysql]> SELECT * FROM tbl1;
 ## References
 
 * For more information about how to get started with ChunJun, see [Quick start](https://dtstack.github.io/chunjun/documents/%E5%BF%AB%E9%80%9F%E5%BC%80%E5%A7%8B).
-* For more information about how to configure the JSON file for OceanBase Database that serves as the source database, see [OceanBase CDC Source](https://github.com/DTStack/chunjun/blob/master/docs_zh/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8/oceanbasecdc/OceanBaseCDC-source.md).
+* For more information about how to configure the JSON file for OceanBase Database that serves as the source database, see [OceanBase CDC Source](https://github.com/DTStack/chunjun/tree/master/docs_zh/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8).
 * For more information about how to configure the JSON file for a MySQL database that serves as the destination database, see [MySQL Sink](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@mysql@mysql-sink).
 * For more script examples, see the files in the `/chunjun-dist/chunjun-examples` folder of the ChunJun project.
