--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/1.upgrade-overview.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/1.upgrade-overview.md
@@ -29,19 +29,19 @@ Observe the following considerations when you upgrade OceanBase Database:
    * `enable_rebalance`
    * `enable_rereplication`
 
-## Limits
+## Limitations
 
-Pay attention to the following limits during the upgrade of OceanBase Database.
+Pay attention to the following limitations during the upgrade of OceanBase Database.
 
 * DDL is disabled in some phases of the upgrade, and is automatically enabled after the upgrade.
 * Major freezes are disabled during the upgrade between some versions, and are automatically enabled after the upgrade.
 * Migration, replication, and load balancing are disabled during the upgrade between some versions.
 * During the upgrade of a cluster, physical baseline backup and physical recovery are not allowed, but log archiving is not interrupted.
 
-<main id="notice" type='notice'>
+  <main id="notice" type='notice'>
       <h4>Notice</h4>
       <p>During the upgrade of OceanBase Database from V4.0 to V4.1, log archiving is interrupted. </p>
-    </main>
+  </main>
 
 * Switchover and failover are not allowed during the upgrade.
 * Tenant creation is not allowed.
@@ -54,7 +54,7 @@ Pay attention to the following impact during the upgrade of OceanBase Database.
 
 * The leader-follower switchover during the upgrade can affect your business. Transactions that exceed 100 ms are terminated.
 
-## Subsequent operations
+## What to do next
 
 [Perform an upgrade](2.start-upgrade.md)
 
