--- a/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/2.V3.1.3.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/2.V3.1.3.md
@@ -30,21 +30,21 @@ JSON data types are supported in basic operations such as DDL operations, index 
 
 - Supports all JSON functions of MySQL 5.7 and some JSON functions of MySQL 8.0 such as JSON_OVERLAPS() and JSON_VALUE().
 
-For more information, see [JSON data types](https://www.oceanbase.com/docs/community-observer-cn-0000000000315727).
+<!-- For more information, see [JSON data types](https://www.oceanbase.com/docs/community-observer-cn-0000000000315727). -->
 
 ### Open source OBKV HBase client
 
-Applications can connect to the OBKV HBase client and use APIs that are compatible with the syntax of HBase 0.94 to communicate with OceanBase Database by calling the Table API. The wide-column model is provided. The filter logic is optimized. KEY, RANGE, and prefixed index partitioning are supported. For more information, see [Usage instructions of the HBaseAPI client](https://www.oceanbase.com/docs/community-observer-cn-10000000000096679).
+Applications can connect to the OBKV HBase client and use APIs that are compatible with the syntax of HBase 0.94 to communicate with OceanBase Database by calling the Table API. The wide-column model is provided. The filter logic is optimized. KEY, RANGE, and prefixed index partitioning are supported. <!--For more information, see [Usage instructions of the HBaseAPI client](https://www.oceanbase.com/docs/community-observer-cn-10000000000096679).-->
 
 ### Native MySQL drivers
 
 You can connect to OceanBase Database by using more native MySQL drivers:
 
-- PyMySQL is supported in a Python 3.x environment and MySQL-python is supported in a Python 2.x environment. For more information, see [Connect to OceanBase Database by using a Python driver](https://www.oceanbase.com/docs/community-observer-cn-0000000000316670).
+- PyMySQL is supported in a Python 3.x environment and MySQL-python is supported in a Python 2.x environment. <!--For more information, see [Connect to OceanBase Database by using a Python driver](https://www.oceanbase.com/docs/community-observer-cn-0000000000316670).-->
 
-- Go MySQL Driver is supported. For more information, see [Connect to OceanBase Database by using Go MySQL Driver](https://www.oceanbase.com/docs/community-observer-cn-0000000000316673).
+- Go MySQL Driver is supported. <!--For more information, see [Connect to OceanBase Database by using Go MySQL Driver](https://www.oceanbase.com/docs/community-observer-cn-0000000000316673).-->
 
-- Unix ODBC driver is supported. For more information, see [Connect to OceanBase Database by using Unix ODBC](https://www.oceanbase.com/docs/community-observer-cn-0000000000316676).
+- Unix ODBC driver is supported. <!--For more information, see [Connect to OceanBase Database by using Unix ODBC](https://www.oceanbase.com/docs/community-observer-cn-0000000000316676).-->
 
 ### ob-operator
 
@@ -62,7 +62,7 @@ ob-operator is provided to run OceanBase Database in a container in a Kubernetes
 
 - Call HTTP APIs to manage Kubernetes resources.
 
-For more information, see [Use ob-operator to deploy OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-0000000000160093).
+<!-- For more information, see [Use ob-operator to deploy OceanBase Database](https://www.oceanbase.com/docs/community-observer-cn-0000000000160093). -->
 
 ### ARM platforms
 
@@ -96,7 +96,7 @@ CDC pulls data from OceanBase Database and provides the data in memory for downs
 
 - The ENGINE option is added to the information_schema.TABLES view.
 
-- Open source documentation is provided. You can submit issues and pull requests about the documents on GitHub. The documentation includes many topics, such as architecture design principles, performance tuning, fault handling, and routine maintenance guide. To view the documentation, visit [GitHub](https://github.com/oceanbase/oceanbase-doc/tree/V3.1.3/zh-CN).
+- Open source documentation is provided. You can submit issues and pull requests about the documents on GitHub. The documentation includes many topics, such as architecture design principles, performance tuning, fault handling, and routine maintenance guide. <!--To view the documentation, visit [GitHub](https://github.com/oceanbase/oceanbase-doc/tree/V3.1.3/zh-CN).-->
 
 ## Behavior changes
 
